--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ layout: default
 ---
 
 <div class="wrapper">
-  <div class="main-content"
+  <div class="main-content">
   <h1>Best practices for writing CSS at Flama.me</h1>
   <div class="intro">
     <p>How do I know these are the best practices? Because we tried several different approaches and this is the one that currently works better for us. We are still trying other approaches and we he iterate this repository weekly ;)</p>
@@ -13,16 +13,10 @@ layout: default
     Please be welcome to fork and/or make Pull Requests with suggestions, new topics, correcting us on typos, grammar, wrong assumptions, broken links, unclear text, etc.
     PR should contain a short description explaining what is and why is it important.</p>
 
-    <a href="#">Or get in touch trough our site Flama</a>
+    <p>Or get in touch trough our <a href="http://www.flama.me/pt">site</a></p>
+    
   </div>
 
-  <div class="summary-nav">
-    <ul>
-      {% for content in site.contents %}
-        <li><a href="{{ content.url }}">{{content.title}}</a></li>
-      {% endfor %}
-    </ul>
-  </div>
-</div>
+  {% include nav.html %}
 
   <!-- <p class="rss-subscribe">subscribe <a href="{{ "/feed.xml" | prepend: site.baseurl }}">via RSS</a></p> -->
