Parametrize Flama's website url and minor type fixes

--- a/index.html
+++ b/index.html
@@ -4,16 +4,14 @@ layout: default
 
 <div>
 
-  <h1>Best practices for writing CSS at Flama.me</h1>
+  <h1>Best practices for writing CSS at Flama</h1>
 
   <p>How do I know these are the best practices? Because we tried several different approaches and this is the one that currently works better for us. We are still trying other approaches and we he iterate this repository weekly ;)</p>
 
   <h2>Contributing to the guide</h2>
 
-  <p>This guide contains our best practices and suggestions that fit our work environment.
-  Please be welcome to fork and/or make Pull Requests with suggestions, new topics, correcting us on typos, grammar, wrong assumptions, broken links, unclear text, etc.
-  PR should contain a short description explaining what is and why is it important.</p>
+  <p>This guide contains our best practices and suggestions that fit our work environment. Please be welcome to fork and/or make Pull Requests with suggestions, new topics, correcting us on typos, grammar, wrong assumptions, broken links, unclear text, etc. Pull Requests should contain a short description explaining what it is and its importancy.</p>
 
-  <p>Or get in touch trough our <a href="http://www.flama.me/pt">site</a></p>
+  <p>Or get in touch through our <a href="{{ site.url }}">site</a></p>
 
 </div>
