--- a/index.html
+++ b/index.html
@@ -6,9 +6,11 @@ layout: default
 
   <h1>Best practices for writing CSS at <a href="{{ site.url }}">Flama</a></h1>
 
-  <p>How do I know these are the best practices? Because we tried several different approaches and this is the one that currently works better for us. We are still trying other approaches and we he iterate this repository weekly ;)</p>
+  <p>How do I know these are the best practices? Because we tried several different approaches and this is the one that currently works better for us. We are still trying other approaches and we iterate this repository weekly ;)</p>
 
   <h2>Contributing to the guide</h2>
+
+  <p><a href="https://github.com/flama/css-styleguide">https://github.com/flama/css-styleguide</a></p>
 
   <p>This guide contains our best practices and suggestions that fit our work environment. Please be welcome to fork and/or make Pull Requests with suggestions, new topics, correcting us on typos, grammar, wrong assumptions, broken links, unclear text, etc. Pull Requests should contain a short description explaining what it is and its importancy.</p>
 
