Fix typos and removes HEAD

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ layout: default
 
 <div class="wrapper">
 
-  <h1>Best practices for writing CSS at <a href="{{ site.url }}">Flama</a></h1>
+  <h1>Best practices for writing CSS at Flama</h1>
 
   <p>How do I know these are the best practices? Because we tried several different approaches and this is the one that currently works better for us. We are still trying other approaches and we iterate this repository weekly ;)</p>
 
